...
    <string name="cost">Cost</string>
    <string name="msrp">MSRP</string>
    <string name="Input_Product_Information">Input Product Information</string>
    <string name="storage_space" >Storage Space</string>
    <string name="category_name" >Category Name</string>
    <string name="warehouse_address" >Address </string>
    <string name="add_warehouse">Warehouse Information</string>
    <string name="warehouse_capacity">Capacity </string>
    <string name="add_user" >Enter new user login information</string>
    <string name="password_hash">Enter a Password</string>
    <string name="password_salt">Enter random encryption value</string>
    <string name="register">Register</string>
    <string name="registration_details">Registration Details</string>
...
